# farmhaus

./: Anchor.toml  package.json
lib/farm_common/: Cargo.toml
lib/farm_common/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
programs/staking/src/instructions/: add_to_whitelist.rs  init_farm.rs  mod.rs  update_developer.rs
programs/staking/src/state/: farm.rs  mod.rs  whitelist_proof.rs
src/: index.ts
src/farm/: farm.client.ts  farm.pda.ts  index.ts
src/farm-common/: account-utils.ts  index.ts  node-wallet.ts
tests/: staking.ts
