[package]
name = "farm"
version = "0.1.0"
description = "Staking platform for creators and users"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farm"
doctest = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version="0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
bitflags = "1.3.2"
static_assertions = "1.1.0"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
farm_common = {path='../../lib/farm_common'}
proc_macros = {path='../../lib/proc_macros'}
arrayref = "0.3.6"